Fix contact form gap

--- a/src/pages/Contact/contact.scss
+++ b/src/pages/Contact/contact.scss
@@ -97,7 +97,7 @@
   padding: 2rem;
   width: 100%;
   display: grid;
-  gap: 0.5rem;
+  gap: 1rem;
   @include mix.mqh(370px) {
     padding: 1rem;
     width: 300px;
@@ -128,7 +128,7 @@
 
   &-row:first-child {
     display: grid;
-    gap: 0.5rem;
+    gap: 1em;
     grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
     @include mix.mqh(500px) {
       display: flex;
